@@ -1,4 +1,7 @@
 ﻿===== Smarty 3.1-DEV  =====
+30/08/2011
+- added locking mechanism to CacheResource API (implemented with File and KeyValueStores)
+
 28/08/2011
 - bugfix clearCompileTemplate() did not work for specific template subfolder or resource
 
